# nqiv

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPING.md  Makefile.am  README  README.md  code_of_conduct.md  configure.ac  default.cfg  lint_cppcheck.sh  nqiv.desktop  setup_cross_env.sh  update_default_cfg.sh
.github/: SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
media/: logo.xcf
scripts/: format_code.sh  icon.cfg  lint_clang-tidy.sh  lint_cppcheck.sh  logo.cfg  make_appimage.sh  nqiv.desktop  nqiv_deploy_cmd.bat  nqivf.sh  platform.cfg  setup_cross_env.sh  show_icon.sh  show_logo.sh  update_default_cfg.sh
src/: Makefile.am  array.c  array.h  cmd.c  cmd.h  drawing.c  drawing.h  event.h  image.c  image.h  keybinds.c  keybinds.h  keyrate.c  keyrate.h  logging.c  logging.h  main.c  md5.c  montage.c  montage.h  optparse.h  platform.c  platform.h  pruner.c  pruner.h  queue.c  queue.h  state.c  state.h  thumbnail.c  thumbnail.h  typedefs.h  worker.c  worker.h
test/: Makefile.am  array_tests.c  array_tests.h  keybind_tests.c  keybind_tests.h  keyrate_tests.c  keyrate_tests.h  logging_tests.c  logging_tests.h  pruner_tests.c  pruner_tests.h  queue_tests.c  queue_tests.h  tester.c
